# graviola

./: .gitmodules  .rustfmt.unstable.toml  COMPATIBILITY.md  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: bench.yml  build.yml  coverage.yml  cranelift.yml  ctgrind.yml  fuzz.yml  lints.yml  x86-cpu.yml
admin/: bench-golang.py  bench-on-arm  coverage  ctgrind  headlines.py  scan-license  structure  x86-cpu
admin/parse-asm/: .gitignore  Cargo.toml  all.sh  cpp.py  driver.aesgcm.py  driver.ed25519.py  driver.mlkem.py  driver.p256.py  driver.p384.py  driver.py  driver.rsa.py  driver.sha2.py  driver.sha3.py  driver.x25519.py  parse.py
admin/parse-asm/src/: asm.pest  main.rs
admin/x86-cpus/: amd-zen3.json  amd-zen4.json  intel-01-p4p.json  intel-02-mrm.json  intel-03-pnr.json  intel-04-nhm.json  intel-05-wsm.json  intel-06-snb.json  intel-07-ivb.json  intel-08-hsw.json  intel-09-bdw.json  intel-10-slt.json  intel-11-slm.json  intel-12-glm.json  intel-13-glp.json  intel-14-tnt.json  intel-15-snr.json  intel-16-skl.json  intel-17-cnl.json  intel-18-icl.json  intel-19-skx.json  intel-20-clx.json  intel-21-cpx.json  intel-22-icx.json  intel-23-tgl.json  intel-24-adl.json  intel-25-mtl.json  intel-26-rpl.json  intel-27-spr.json  intel-28-emr.json  intel-29-gnr.json  intel-30-gnr256.json  intel-31-dmr.json  intel-32-srf.json  intel-33-arl.json  intel-34-lnl.json  intel-35-ptl.json  intel-36-cwf.json
benches/: aes_gcm.rs  p256.rs  rsa_priv.rs  sha2.rs  x25519.rs
fuzz/: Cargo.toml
fuzz/fuzzer/: aead.rs  kx.rs  sha2.rs
graviola/: Cargo.toml
graviola-bench/: Cargo.toml
graviola-bench/benches/: aes_gcm.rs  chacha20poly1305.rs  criterion.rs  ed25519.rs  hkdf.rs  hmac.rs  mlkem768.rs  p256.rs  p384.rs  rsa_gen.rs  rsa_priv.rs  rsa_pub.rs  sha2.rs  sha3.rs  x25519.rs  xchacha20poly1305.rs
graviola-bench/benches/criterion/: aarch64.rs  mod.rs
graviola/src/: error.rs  lib.rs  test.rs
graviola/src/high/: asn1.rs  curve.rs  ecdsa.rs  ed25519.rs  hash.rs  hkdf.rs  hmac.rs  hmac_drbg.rs  mod.rs  pkcs1.rs  pkcs8.rs  rsa.rs
graviola/src/high/asn1/: oid.rs  pkix.rs
graviola/src/high/ecdsa/: secp256r1.der  secp256r1.pkcs8.der  secp256r1.wrong-public-key.der  secp256r1.wrong-version.der  secp384r1.der  secp384r1.pkcs8.der
graviola/src/high/rsa/: rsa2048.pkcs8.der  rsa3072.pkcs8.der  rsa4096.pkcs8.der  rsa6144.der  rsa6144.pkcs8.der  rsa8192.der  rsa8192.pkcs8.der
graviola/src/low/: ct.rs  entry.rs  inline_assembly_safety.rs  macros.rs  mod.rs  posint.rs  tests.rs
graviola/src/low/aarch64/: aes.rs  aes_gcm.rs  bignum_add.rs  bignum_add_p256.rs  bignum_add_p384.rs  bignum_bitsize.rs  bignum_cmp_lt.rs  bignum_coprime.rs  bignum_copy_row_from_table.rs  bignum_copy_row_from_table_16.rs  bignum_copy_row_from_table_16_neon.rs  bignum_copy_row_from_table_32.rs  bignum_copy_row_from_table_32_neon.rs  bignum_copy_row_from_table_8n.rs  bignum_copy_row_from_table_8n_neon.rs  bignum_copy_row_from_table_mux.rs  bignum_ctz.rs  bignum_demont.rs  bignum_demont_p256.rs  bignum_demont_p384.rs  bignum_digitsize.rs  bignum_emontredc_8n.rs  bignum_eq.rs  bignum_inv_p256.rs  bignum_inv_p384.rs  bignum_kmul_16_32.rs  bignum_kmul_32_64.rs  bignum_ksqr_16_32.rs  bignum_ksqr_32_64.rs  bignum_madd_n25519.rs  bignum_mod_n25519.rs  bignum_mod_n256.rs  bignum_mod_n384.rs  bignum_modadd.rs  bignum_modinv.rs  bignum_modsub.rs  bignum_montifier.rs  bignum_montmul.rs  bignum_montmul_p256.rs  bignum_montmul_p384.rs  (+48 more)
graviola/src/low/generic/: aes_gcm.rs  blockwise.rs  chacha20.rs  ct_copy.rs  ct_equal.rs  ghash.rs  mlkem.rs  mod.rs  optimise_barrier.rs  poly1305.rs  sha256.rs  sha512.rs  zeroise.rs
graviola/src/low/x86_64/: aes.rs  aes_gcm.rs  bignum_add.rs  bignum_add_p256.rs  bignum_add_p384.rs  bignum_bitsize.rs  bignum_cdiv.rs  bignum_cmp_lt.rs  bignum_coprime.rs  bignum_copy_row_from_table.rs  bignum_copy_row_from_table_16_avx2.rs  bignum_copy_row_from_table_8n_avx2.rs  bignum_copy_row_from_table_mux.rs  bignum_ctz.rs  bignum_demont.rs  bignum_demont_p256.rs  bignum_demont_p384.rs  bignum_digitsize.rs  bignum_emontredc_8n.rs  bignum_eq.rs  bignum_inv_p256.rs  bignum_inv_p384.rs  bignum_kmul_16_32.rs  bignum_kmul_32_64.rs  bignum_ksqr_16_32.rs  bignum_ksqr_32_64.rs  bignum_madd_n25519.rs  bignum_mod_n25519.rs  bignum_mod_n256.rs  bignum_mod_n384.rs  bignum_modadd.rs  bignum_modinv.rs  bignum_modsub.rs  bignum_montifier.rs  bignum_montmul.rs  bignum_montmul_p256.rs  bignum_montmul_p384.rs  bignum_montredc.rs  bignum_montsqr.rs  bignum_montsqr_p256.rs  (+49 more)
graviola/src/mid/: aes_gcm.rs  chacha20poly1305.rs  ed25519.rs  mlkem768.rs  mod.rs  p256.rs  p384.rs  quic.rs  rng.rs  rsa_priv.rs  rsa_pub.rs  sha1.rs  sha2.rs  sha3.rs  util.rs  x25519.rs  xchacha20poly1305.rs
graviola/src/mid/p256/: precomp.rs
graviola/src/mid/p384/: precomp.rs
graviola/src/mid/rsa_priv/: gen.py  generate.rs
graviola/src/testdata/: invalid-primes.txt  valid-primes.txt
graviola/tests/: crosschecks.rs  wycheproof.rs  zeroing.rs
reports/aarch64/: cpuinfo.txt
reports/aarch64/report/: golang.txt  index.html
reports/x86_64/: cpuinfo.txt
reports/x86_64/report/: golang.txt  index.html
rustls-graviola/: Cargo.toml  README.md
rustls-graviola/examples/: client.rs  quic-client.rs  quic-server.rs  server.rs
rustls-graviola/src/: aead.rs  hash.rs  hmac.rs  kx.rs  lib.rs  quic.rs  sign.rs  suites.rs  ticketer.rs  verify.rs
rustls-graviola/src/kx/: hybrid.rs  mlkem.rs
rustls-graviola/tests/: pair.rs
src/: error.rs  lib.rs
src/high/: asn1.rs  curve.rs  ecdsa.rs  hash.rs  hmac.rs  hmac_drbg.rs  mod.rs  pkcs1.rs  rsa.rs
src/high/asn1/: oid.rs  pkix.rs
src/high/ecdsa/: tests.rs
src/high/hmac/: tests.rs
src/high/rsa/: rsa2048.der  rsa3072.der  rsa4096.der
src/low/: macros.rs  mod.rs  posint.rs  tests.rs
src/low/aarch64/: aes.rs  bignum_add_p256.rs  bignum_copy_row_from_table.rs  bignum_demont_p256.rs  ghash.rs  (+24 more)
src/mid/: aes_gcm.rs  mod.rs  p256.rs  p256_tests.rs  rng.rs  rsa_priv.rs  rsa_pub.rs  sha2.rs  util.rs  x25519.rs
tests/: wycheproof.rs
x86-cpuid/: Cargo.toml
x86-cpuid/src/: main.rs
(+3044 files in other folders)
