[package]
name = "curve25519"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_core = "0.6"

[profile.release]
debug = "full"

[dev-dependencies]
aws-lc-rs = "1"
criterion = "0.5"
openssl = "0.10.64"
proptest = "1.5.0"
rand_core = { version = "0.6", features = ["getrandom"] }
ring = "0.17"
x25519-dalek = "2"

[[bench]]
name = "x25519"
harness = false
