[package]
name = "curve25519"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_core = "0.6"

[profile.release]
debug = "full"

[dev-dependencies]
aws-lc-rs = "1"
criterion = "0.5"
proptest = "1.5.0"
rand_core = { version = "0.6", features = ["getrandom"] }
ring = "0.17"
x25519-dalek = "2"

[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
openssl = "0.10"

[features]
__bench_openssl = []

[[bench]]
name = "x25519"
harness = false
