[package]
name = "graviola"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = "0.2"

[profile.release]
debug = "full"

[dev-dependencies]
aws-lc-rs = "1"
criterion = "0.5"
hex = { version = "0.4", features = ["serde"] }
p256 = { version = "0.13.2", features = ["ecdh"] }
proptest = "1.5.0"
rand_core = { version = "0.6", features = ["getrandom"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
x25519-dalek = "2"

[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
openssl = "0.10"

[features]
__bench_openssl = []

[[bench]]
name = "x25519"
harness = false

[[bench]]
name = "p256"
harness = false

[[bench]]
name = "sha2"
harness = false
