[package]
name = "graviola-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
aws-lc-rs = { version = "1", features = ["non-fips"], default-features = false }

[dependencies.graviola]
path = "../graviola"

[[bin]]
name = "sha2"
path = "fuzzer/sha2.rs"
test = false
doc = false
bench = false
