[package]
name = "graviola-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
graviola = { path = "../graviola" }

[dev-dependencies]
aes-gcm = "0.10"
aws-lc-rs = "1"
criterion = "0.5"
hex = { version = "0.4", features = ["serde"] }
p256 = { version = "0.13.2", features = ["ecdh"] }
proptest = "1.5.0"
rand_core = { version = "0.6", features = ["getrandom"] }
ring = "0.17"
rsa = { version = "0.9", features = ["sha2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
x25519-dalek = "2"

[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.dev-dependencies]
openssl = "0.10"

[features]
__bench_openssl = []

[[bench]]
name = "x25519"
harness = false

[[bench]]
name = "p256"
harness = false

[[bench]]
name = "sha2"
harness = false

[[bench]]
name = "aes_gcm"
harness = false

[[bench]]
name = "rsa_pub"
harness = false

[[bench]]
name = "rsa_priv"
harness = false
