[package]
name = "graviola-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
graviola = { path = "../graviola" }
codspeed-criterion-compat = { optional = true, version = "2" }

[dev-dependencies]
aes-gcm = "0.10"
aws-lc-rs = { version = "1", features = ["non-fips"], default-features = false }
chacha20poly1305 = "0.10"
criterion = "0.5"
hex = { version = "0.4", features = ["serde"] }
hmac = "0.12"
p256 = { version = "0.13.2", features = ["ecdh"] }
p384 = { version = "0.13", features = ["ecdh"] }
proptest = "1.5.0"
rand_core = { version = "0.6", features = ["getrandom"] }
ring = "0.17"
rsa = { version = "0.9", features = ["sha2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
x25519-dalek = "2"

[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.dev-dependencies]
openssl = "0.10"

[features]
__bench_openssl = []
__bench_codspeed = ["dep:codspeed-criterion-compat"]

[[bench]]
name = "x25519"
harness = false

[[bench]]
name = "p256"
harness = false

[[bench]]
name = "p384"
harness = false

[[bench]]
name = "sha2"
harness = false

[[bench]]
name = "aes_gcm"
harness = false

[[bench]]
name = "rsa_pub"
harness = false

[[bench]]
name = "rsa_priv"
harness = false

[[bench]]
name = "rsa_gen"
harness = false

[[bench]]
name = "chacha20poly1305"
harness = false

[[bench]]
name = "xchacha20poly1305"
harness = false

[[bench]]
name = "hmac"
harness = false
