[package]
name = "graviola"
version = "0.2.0-alpha.2"
edition = "2021"
repository = "https://github.com/ctz/graviola/"
license = "Apache-2.0 OR ISC OR MIT-0"
readme = "README.md"
description = "graviola is a modern, fast cryptography library"
categories = ["network-programming", "cryptography"]
rust-version = "1.72"

[features]
default = []

[dependencies]
cfg-if = "1"
getrandom = "0.2"

[dev-dependencies]
hex = { version = "0.4", features = ["serde"] }
proptest = "1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
