[package]
name = "graviola"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/ctz/graviola/"
license = "Apache-2.0 OR ISC OR MIT-0"
readme = "README.md"
description = "graviola is a modern, fast cryptography library"
categories = ["network-programming", "cryptography"]
rust-version = "1.89"

[features]
default = []

[dependencies]
cfg-if = "1"
getrandom = "0.3"

[dev-dependencies]
aws-lc-rs = { version = "1.13", default-features = false, features = ["alloc", "prebuilt-nasm", "non-fips"] }
hex = { version = "0.4", features = ["serde"] }
proptest = "1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dev-dependencies]
crabgrind = "=0.1.9" # compatible with valgrind package on GHA ubuntu-latest
