[package]
name = "graviola"
version = "0.3.4"
edition = "2024"
repository = "https://github.com/ctz/graviola/"
license = "Apache-2.0 OR ISC OR MIT-0"
readme = "README.md"
description = "graviola is a modern, fast cryptography library"
categories = ["network-programming", "cryptography"]
rust-version = "1.89"

[features]
default = []
__ctgrind = ["dep:crabgrind"]

[dependencies]
cfg-if = "1"
getrandom = "0.3"
crabgrind = { version = "0.2.6", optional = true }

[dev-dependencies]
aws-lc-rs = { version = "1.16", default-features = false, features = ["alloc", "prebuilt-nasm", "non-fips"] }
hex = { version = "0.4", features = ["serde"] }
proptest = "1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.24.0"
