[package]
name = "rustls-graviola"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/ctz/graviola/"
license = "Apache-2.0 OR ISC OR MIT-0"
description = "graviola is a modern, fast cryptography library"
categories = ["network-programming", "cryptography"]
rust-version = "1.72"
readme = "README.md"

[dependencies]
graviola = { version = "0.2.1", path = "../graviola" }
libcrux-ml-kem = { version = "0.0.2", default-features = false, features = ["mlkem768", "alloc"] }
rustls = { version = "0.23.18", default-features = false, features = ["std", "tls12"] }

[dev-dependencies]
env_logger = "0.11"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", default-features = false }
hyper-rustls = { version = "0.27", default-features = false, features = ["native-tokio", "http1", "tls12", "logging"] }
hyper-util = { version = "0.1", default-features = false, features = ["server-auto"] }
rustls = { version = "0.23.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
tokio = { version = "1.0", features = ["io-std", "macros", "net", "rt-multi-thread"] }
tokio-rustls = { version = "0.26", default-features = false }
