[package]
name = "rustls-graviola"
version = "0.3.3"
edition = "2024"
repository = "https://github.com/ctz/graviola/"
license = "Apache-2.0 OR ISC OR MIT-0"
description = "graviola is a modern, fast cryptography library"
categories = ["network-programming", "cryptography"]
rust-version = "1.85"
readme = "README.md"

[dependencies]
graviola = { version = "0.3.0", path = "../graviola" }
libcrux-ml-kem = { version = "0.0.6", default-features = false, features = ["mlkem768", "alloc"], optional = true }
rustls = { version = "0.23.18", default-features = false, features = ["std", "tls12"] }

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", default-features = false }
hyper-rustls = { version = "0.27", default-features = false, features = ["native-tokio", "http1", "tls12", "logging"] }
hyper-util = { version = "0.1", default-features = false, features = ["server-auto"] }
rustls = { version = "0.23.23", default-features = false, features = ["aws-lc-rs", "ring"] }
tokio = { version = "1.0", features = ["io-std", "macros", "net", "rt-multi-thread"] }
tokio-rustls = { version = "0.26", default-features = false }

# quic stuff. TODO(matheus23): Look through this again
noq = { version = "0.17", default-features = false, features = ["runtime-tokio", "rustls"] }
rcgen = "0.13"
rustls-pemfile = "2"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
url = "2"

[features]
default = ["libcrux-ml-kem"]
libcrux-ml-kem = ["dep:libcrux-ml-kem"]
